tooling/nargo_cli/tests/snapshots/execute__tests__bool_or_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9565419366005759325",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUUQ6CMAztZESmMRpN9EfvMASFTz/kIIuEc3B0JXZa6vyia7Js0Pb19VGm4G0K12Aa9xn8mo+54W6nWS6IZWPyVJF4jkRW8N+874S7YfmDPxFs2LC6kvi1La8m0J8g/8IQzAj4Z4+v4+DbOeLc+zE+sLoJi+M5NKYhMQ2LWcH4EqA43kdn1ednr7WG73mDZ8PwYswP5SSt/y7A39daYq8H4qPfJ2PveX5IG5DjnqeMz57VjaXZlvXDNfP/vO7l61e1tZ95R/yUaEBNEz+NP+LzItCHnsCzq1zeFa5zF9e25cNxnYDp9AQzqLN2lQcAAA==",
  "debug_symbols": "lZDLCsMgEEX/ZdYuTNLQ1F8pJZhkEgRR8VEo4r9XSxeSRcDNwB3OXIYTYcMlHLNQu3bAnhGkXrkXWuUUE4HFCinFMddroGV09x/vDFclOs+tBzaMBFBtwG40X+9CIrCRpheBbrrmxzP/aON72sh3LXzK6c2t4IvEv5o9qLUy5T8GT9KM1StuwWLRV5krn/YD6adcm6u/",
  "file_map": {
    "50": {
      "source": "fn main(x: u1, y: u1) {\n    assert(x | y == 1);\n\n    assert(x | y | x == 1);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/bool_or/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
