tooling/nargo_cli/tests/snapshots/execute__tests__brillig_acir_as_brillig_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "12206181205520729365",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/91WsU7DMBB12gQIFUKClYFPsKmjtCxUaiXEwsjCZLVUDPAP+XRk6aw8PdyqtHEbccsl8uXd3XtnO5lqLROf07uKxMzE68PMdIilo4VusxDzLb4UP4D1YYfNlpS3S/yJtlUZ6a/D+selYKbkJ2AmwNfngrNoWnzuRYEPcfyNX7+SZ5yzEHMh6+H5Wp5L+iaF/gn10beR+gfQm7d5kyS3GQmXlrhMNCs26BsOQ7SwVkBu5IRtSO9Yt+/pEXA5jnOitsVxuHjIiItc8Dftn4Li76jOIk2d+gZwlYprFOpV0APyjPOLPZ1F4hGvoPh78V7fBfXft5kNa2eRvvaZ52fA5TjVcy726fcFcDmOc27bvynuBc8Fz/Km/Rvy8yyPqc48TZ3R/RtyjVR7x+RN9/nridYh77BpeWDtMX9B8VN5v9zQx2zPOte1M+uxW7vKrVZ26ZgnbwPgCe/JY597T+Lx3Msi+Xj+dq1hl3mdR2rwvHSti61cvXS1MVNrPqyp/qLLqXV6Vb856tuZfMgd9Aa4HMc5Y/8Lp9bnHXr5j/osAZfjOGcf9fmEXk51zn1FavC8/ACyak0e1REAAA==",
  "debug_symbols": "tdfBisIwEAbgd8m5h8wkmUl8lWVZqtalUKpUXVjEd992sa7E4PIfehEi/zeRTmySi9k26/PnR9vv9kezeruYbr+pT+2+H0eXa2XWQ9t17efH49fGTh8kv/njoe6n4fFUDyezUq1M02/NKtGod23XmFWw1/fKkIL5COYTlmcL5gnMM5h3r/OS5z2YD2BewLyC+WJ/iWdAjnORUOEsLAgWxT6T/RMuFw4WHhYBFgILhUWERbnnwc5CUia8hQXBgmHhYOFhEWAh/wj1uVBYRFgkVAQLi+IcHOkmOObvK7GwIFgwLIrrijXchT6K6jlKMkc535LEL1k8LFlcFiyuxccSaV5tkUIuAiwEFgqL4j8zWr6LfLVpQkW0sCBYMCwcLDwsyuchN+916vOTRIywSKhIFhblcy+nu8j37MSwcLDwsAiwEFgoKsgWGyJxbogkfiKEE8aJw0mxKaLpTtzrt664OEcLTyosWl0Wra6LVb+Oo696aOt119wu7btzv3m4w5++D012nT8M+02zPQ/NdLF/uNNPizFwFXT60dMyk1ipHecY5/kB",
  "file_map": {
    "50": {
      "source": "fn main(x: u32) {\n    // Safety: testing context\n    unsafe {\n        assert(entry_point(x) == 2);\n        swap_entry_point(x, x + 1);\n        assert(deep_entry_point(x) == 4);\n    }\n}\n\nfn inner(x: u32) -> u32 {\n    x + 1\n}\n\nunconstrained fn entry_point(x: u32) -> u32 {\n    inner(x + 1)\n}\n\nfn swap(x: u32, y: u32) -> (u32, u32) {\n    (y, x)\n}\n\nunconstrained fn swap_entry_point(x: u32, y: u32) {\n    let swapped = swap(x, y);\n    assert(swapped.0 == y);\n    assert(swapped.1 == x);\n    let swapped_twice = swap(swapped.0, swapped.1);\n    assert(swapped_twice.0 == x);\n    assert(swapped_twice.1 == y);\n}\n\nfn level_3(x: u32) -> u32 {\n    x + 1\n}\n\nfn level_2(x: u32) -> u32 {\n    level_3(x + 1)\n}\n\nfn level_1(x: u32) -> u32 {\n    level_2(x + 1)\n}\n\nunconstrained fn deep_entry_point(x: u32) -> u32 {\n    level_1(x + 1)\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/brillig_acir_as_brillig/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
